fix player z-index

--- a/app/styles/_player.sass
+++ b/app/styles/_player.sass
@@ -9,7 +9,7 @@
     bottom: 0
     left: 0
     right: 0
-    z-index: 3
+    z-index: 10
     width: 100%
     min-height: 110px
     height: 110px
@@ -95,7 +95,7 @@
     .mejs-time-total
       width: 100% !important
       margin: 5px 0
-      background: #333
+      background: #FF5722
 
     .mejs-time-loaded
       background: #444
@@ -106,9 +106,9 @@
       height: 12px
       border: none
       outline: none
-      background: #FF5722
       top: -4px
       border-radius: 100%
+      background: #333
       &:hover
         width: 20px
         height: 20px
